# cryptoprice

./: .dockerignore  .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.rs
.cargo-husky/hooks/: pre-commit
.githooks/: pre-commit
.github/workflows/: manual-build.yml  release.yml
src/: calc.rs  config.rs  error.rs  lib.rs  main.rs
src/output/: json.rs  table.rs
src/provider/: coingecko.rs  coinmarketcap.rs  mod.rs  stooq.rs  yahoo.rs
tests/: provider_api_mock.rs  provider_api_replay.rs
tests/fixtures/: README.md
tests/fixtures/coingecko/: simple_price_btc_eth_usd.json
tests/fixtures/coinmarketcap/: quotes_latest_btc_eth_usd.json  quotes_latest_error.json
